vsaas_subscription_aws_k8s/k8s/web-deployment.yaml
# This is a namespace object
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: customer-name
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${CUSTOMER_NAME}
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: 748400346184.dkr.ecr.ap-southeast-1.amazonaws.com/vivesoftware:latest
        imagePullPolicy: Always
        resources:
          requests:
            ephemeral-storage: "2Gi"
            cpu: "0.8"
            memory: "1.5Gi"
          limits:
            ephemeral-storage: "4Gi"
            cpu: "1"
            memory: "2Gi"
        ports:
        - name: port8069
          containerPort: 8069
        - name: port8072
          containerPort: 8072
      imagePullSecrets:
        - name: regcred
