vsaas_subscription_aws_k8s/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${CUSTOMER_NAME}
  name: web
  labels:
    service: web
spec:
  selector:
    app: web
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8069
      targetPort: 8069
    - name: longpolling
      protocol: TCP
      port: 8072
      targetPort: 8072
