vsaas_subscription_aws_k8s/k8s/default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/default: "true"
  podSelector:
    matchLabels:
      network/default: "true"
